<resources>
    <string name="app_name">Instruisto</string>
    <string name="sign_in_message">Sign in</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account? Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_message">Already have an account? Log in</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="password_again_hint">Confirm Password</string>
    <string name="log_in">Log in</string>
    <string name="log_in_message">Don\'t have an account? Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lessons">Lessons</string>
    <string name="nav_menu_lessons">Lessons</string>
    <string name="nav_menu_flashcards">Flashcards</string>
    <string name="nav_menu_grammar">Grammar</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="word_navigation">Navigation</string>
    <string name="destination_grammar_points">Grammar points</string>
    <string name="word_your_progress">Your progress:</string>
    <string name="word_flashcards_for_today">Flashcards for today:</string>
    <string name="sample_flashcards_for_today">10 new words\n3 to relearn\n28 to refresh</string>
    <string name="word_change_password">Change password</string>
    <string name="word_night_mode">Night mode</string>
    <string name="word_dark_mode">Dark mode</string>
    <string name="sample_30_percent_done">30% done</string>
    <string name="sample_new_sords_count">10 new words</string>
    <string name="sample_relearn_count">3 to relearn</string>
    <string name="sample_refresh_count">28 to refresh</string>
    <string name="start_flashcards_button_text">Start</string>
    <string name="word_decks">Decks</string>
    <string name="word_flashcards">Flashcards</string>
    <string name="word_profile">Profile</string>
    <string name="sample_deck_name">Deck name</string>
    <string name="word_in_contents">In contents</string>
    <string name="word_in_gpoint_name">In name</string>
    <string name="word_search_in">Search in:</string>
    <string name="word_enter_name_of_the_grammar_point">Enter name of the grammar point</string>
    <string name="word_lesson_number_x">Practice #%d</string>
    <string name="word_lesson_number_1">Lesson 1</string>
    <string name="word_practice">Practice</string>
    <string name="word_grammar">Grammar</string>
    <string name="word_lessons">Lessons</string>
    <string name="word_deck">Deck</string>
    <string name="word_nav_deck">Deck: {name}</string>
    <string name="word_front_and_back">Front and back:</string>
    <string name="word_picture">Picture:</string>
    <string name="word_make_one_more">Add one more</string>
    <string name="word_save">Save</string>
    <string name="word_delete">Delete</string>
    <string name="word_choose_picture">Choose picture</string>
    <string name="word_dont_remember">Don\'t remember</string>
    <string name="sample_hamster">Hamster</string>
    <string name="sample_hamstro">Hamstro</string>
    <string name="word_remember">Remember</string>
    <string name="word_review">Review</string>
    <string name="word_edit_flashcard">Edit flashcard</string>
    <string name="word_grammar_point">Grammar point</string>
    <string name="sample_sentence">Mi vidas en ĉiu ____ nur homon</string>
    <string name="word_correct">Correct!</string>
    <string name="sample_correct_answer">Correct answer:\nA b c d e f</string>
    <string name="word_incorrect">Incorrect!</string>
    <string name="word_sign_out">Sign out</string>
    <string name="word_lesson_ended">Lesson ended</string>
    <string name="back_to_lesson_list">To the main page</string>
    <string name="word_mistakes">Mistakes</string>
    <string name="word_percentage">Performance</string>
    <string name="word_invalid_username_or_password">Invalid username or password</string>
    <string name="word_passwords_do_not_match">Passwords do not match</string>
    <string name="word_username_taken">Username is already taken</string>
    <string name="progress_percentage">%d%% done</string>
    <string name="placeholder_no_grammar_found">No grammar points found</string>
</resources>