<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_profile">

    <TextView
        android:id="@+id/flashcards_for_today_new_words_count"
        style="@style/PlanForToday"
        android:text="@string/sample_new_sords_count"/>
    <TextView
        android:id="@+id/flashcards_for_today_relearn_count"
        style="@style/PlanForToday"
        android:text="@string/sample_relearn_count"/>
    <TextView
        android:id="@+id/flashcards_for_today_refresh_count"
        style="@style/PlanForToday"
        android:text="@string/sample_refresh_count"/>

</LinearLayout>