<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/big_margin"
    tools:context=".ui.grammarlist.GrammarListFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="clear_text"

        android:hint="@string/word_enter_name_of_the_grammar_point"
        style="@style/Widget.Material3.TextInputLayout.FilledBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/big_margin"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/search_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word_search_in"
        style="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintTop_toBottomOf="@id/til"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/chip_group"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_in"
        app:layout_constraintBottom_toTopOf="@+id/recycler">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_in_contents"
            android:checkable="true"
            app:checkedIconEnabled="true"
            app:checkedIcon="@drawable/check_24px"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_in_gpoint_name"
            android:checkable="true"
            android:checked="true"
            app:checkedIconEnabled="true"
            app:checkedIcon="@drawable/check_24px"/>

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        app:layout_constraintTop_toBottomOf="@+id/chip_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>