<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/big_margin"
    tools:context=".ui.editflashcard.EditFlashcardFragment">

    <TextView
        android:id="@+id/front_and_back"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/word_front_and_back"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/front_and_back">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/front_et"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/back_et"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/picture_prescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word_picture"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <ImageView
        android:id="@+id/search_decks_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_margin"
        android:src="@drawable/delete_24px"

        app:layout_constraintTop_toTopOf="@id/picture_prescription"
        app:layout_constraintBottom_toBottomOf="@id/picture_prescription"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/word_delete" />

    <FrameLayout
        android:id="@+id/image_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/big_margin"
        android:background="@drawable/border"

        app:layout_constraintBottom_toTopOf="@+id/save_btn"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picture_prescription" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/hamster"
            android:visibility="visible"
            android:scaleType="centerCrop"/>

        <Button
            android:id="@+id/add_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_choose_picture"
            android:visibility="gone"
            android:layout_gravity="center"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"/>

    </FrameLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/word_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_frame"
        app:layout_constraintEnd_toStartOf="@id/one_more_btn"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <Button
        android:id="@+id/one_more_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:text="@string/word_make_one_more"
        app:icon="@drawable/check_24px"
        app:layout_constraintTop_toTopOf="@+id/save_btn"
        app:layout_constraintStart_toEndOf="@id/save_btn"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>