<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".ui.reviewflashcards.ReviewFlashcardsFragment"
    android:padding="24dp">

    <TextView
        android:id="@+id/front_text"
        style="@style/TextAppearance.Material3.DisplayLarge"
        android:text="@string/sample_hamstro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/front_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/back_text"
        style="@style/TextAppearance.Material3.DisplaySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sample_hamster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,1:1"
        android:scaleType="centerCrop"
        android:src="@drawable/hamster"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/dont_remember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_text"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/dont_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word_dont_remember"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/remember"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        style="@style/TonalErrorButton"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word_remember"
        style="@style/Widget.Material3.Button.TonalButton"
        app:layout_constraintTop_toTopOf="@+id/dont_remember"
        app:layout_constraintBottom_toBottomOf="@+id/dont_remember"
        app:layout_constraintStart_toEndOf="@+id/dont_remember"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />

    <ImageButton
        android:id="@+id/turn_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/keyboard_return_24px"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialDivider2"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>